# Aarr-In-One

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  deploy.sh  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
backend/: celery_app.py  config.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  redis.py  websocket_manager.py
backend/auth/: middleware.py  permissions.py  router.py  schemas.py  service.py
backend/migrations/: env.py
backend/models/: __init__.py  base.py  download.py  indexer.py  livetv.py  media.py  notification.py  quality.py  request.py  setting.py  subtitle.py  user.py  vpn.py
backend/modules/: media_pipeline.py
backend/modules/discovery/: router.py  schemas.py  service.py  tmdb_client.py
backend/modules/downloads/: release_parser.py  router.py  schemas.py  service.py  torrent_client.py  usenet_client.py
backend/modules/indexers/: cloudflare_bypass.py  protocols.py  router.py  schemas.py  service.py
backend/modules/iptv/: router.py  scanner.py  schemas.py  xtream_client.py
backend/modules/setup/: router.py  (+2 more)
backend/services/: arr_client.py  auto_config.py  file_manager.py  jellyfin_client.py  notification_service.py  settings_service.py
backend/system/: health.py  router.py  schemas.py
backend/tasks/: epg_refresh.py  library_sync.py  rss_sync.py  subtitle_scan.py  vpn_health.py
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  router.tsx
scripts/: entrypoint.sh  start-dev.sh
tests/: conftest.py  test_auth.py  test_health.py
(+58 files in other folders)
